# ProjectVenomROS

./: README.md
venom_offb/: CMakeLists.txt  package.xml
venom_offb/include/: Navigator.cpp  Navigator.h
venom_offb/include/venom_offb/: Navigator.cpp  Navigator.h
venom_offb/launch/: circle.launch  lpe.launch  sitl.launch
venom_offb/scripts/: ping
venom_offb/src/: circle.cpp  fake_ai.cpp  fake_ai_node.cpp  hover.cpp  hunt_cloud.cpp  hunt_drone.cpp  hunt_servo.cpp  navigation_node.cpp  offb_circle.cpp  vision_pose_converter.cpp
venom_perception/: CMakeLists.txt  package.xml  setup.py
venom_perception/include/: Perceiver.h  Zed.h
venom_perception/include/venom_perception/: Zed.cpp  Zed.h
venom_perception/launch/: venom.launch
venom_perception/samples/: pose_0.txt  pose_1.txt  pose_2.txt  pose_3.txt  pose_4.txt  pose_5.txt
venom_perception/scripts/: ai_bridge.py  ai_bridge2.py  ai_publisher.py  detector_ros  set_ros_ip  set_ros_ip.bash  show_box  traj_predictor  yolo_detector  yolo_detector_grayscale
venom_perception/src/: Venom_Analog_Sensors_Read.ino  cloud_reader.cpp  cv_test.cpp  depth_map.cpp  detect_drone.cpp  example.cpp  local_map.cpp  obstacle.cpp  perception_node.cpp  save_pcd.cpp  save_zed.cpp  sphere_map.cpp  visual_pose.cpp
venom_perception/src/venom_perception/: TrajPredict.py
venom_ros/: CMakeLists.txt  package.xml
venom_ros/include/venom/: Drone.h
venom_ros/src/: cloud_reader.cpp  offb_node.cpp  visual_odometry.cpp
venom_zed/: CMakeLists.txt  README.md  package.xml
venom_zed/config/: marker.rviz
venom_zed/include/: VenomZed.hpp
venom_zed/launch/: depth_image.launch  quaternion_test.launch
venom_zed/src/: depth_image.cpp  example.cpp  quaternion_test.cpp  venom_zed_test.cpp
zed_app/: CMakeLists.txt  README.md  package.xml
zed_app/src/: depth_viewer.cpp  obstacle_detect.cpp  pcl_viewer.cpp
